# django-json-widget

./: .gitignore  .travis.yml  AUTHORS.rst  CHANGELOG.rst  CONTRIBUTING.md  CONTRIBUTING.rst  HISTORY.rst  MANIFEST.in  Makefile  README.rst  manage.py  pyproject.toml  requirements.txt  requirements_dev.txt  requirements_test.txt  runtests.py  setup.cfg  setup.py  tox.ini
.github/: ISSUE_TEMPLATE.md
.github/workflows/: tests.yml
django_json_widget/: widgets.py
django_json_widget/templates/: django_json_widget.html
example/: README.md
example/characters/: admin.py  apps.py  models.py
example/characters/migrations/: 0001_initial.py  0002_alter_character_data_alter_character_other_data.py  0002_character_other_data.py
example/example/: settings.py  urls.py
example/templates/django_json_widget/: base.html
tests/: settings.py  test_jsoneditor_access.py  test_logic.py  test_models.py  test_widget_security.py  test_widgets.py
